--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ body {
 }
 #submit {
   background-color: black;
+  border: black 1px solid;
   color: white;
-  padding: 20px;
+  padding: 0.5em 3em;
   margin: 6px;
   text-align: center;
+  font-size: 16px;
 }
 
 h2 {
@@ -40,32 +42,36 @@ h2 {
     margin: 0;
     font-family: 'Inter Extra Bold';
 }
+h2:not(#contentBox5 #contentBox6) {
+    margin-bottom: 2em;
+}
 #socialMedia img {
   margin-right: 1.5em;
-  margin-top: 1em;
+  padding: 0 1.5em;
 }
-
+#socialMedia {
+  margin-bottom: 3.5em;
+  margin-top: 2em;
+}
 .why {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 4em;
-    margin-right: 4em;
+    padding: 2em;
 }
 
 #contentBox5 .why p {
   margin: 0;
-  line-height: 1.5;
   text-align: center;
 }
 #contentBox5 img {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    max-width: 100px; /* subject to change*/
-    height: 100px; /* subject to change*/
-    /*margin-bottom: 10px; */
+    max-width: 150px; /* subject to change*/
+    max-height: 100px; /* subject to change*/
 }
 #contentBox1 {
   flex-direction: column;
@@ -73,7 +79,7 @@ h2 {
   flex-direction: space-between;
   align-items: center;
   text-align: center;
-  padding: 6em;
+  padding: 6em 6em 0 6em;
   width: 67%;
 }
 #contentBox1 h1 {
@@ -82,9 +88,15 @@ h2 {
 #subForm {
   background-color: white;
   border: solid 1px white;
-  border-radius: .1em 20px 20px;
+  border-radius: 0 0px 0px 20px;
   opacity: 0.84;
   margin-right: 1.5em;
+  padding: 1.5em 0 1.5em 8em;
+}
+#subscribe {
+  padding: 1em 2em;
+  border-radius: 0 2em 2em 0;
+  border: solid 1px white;
 }
 #contentBox1, #contentBox2, #contentBox3, #contentBox4 {
     /*background-image: url("assets/bgCard.png");*/ /*Keeping cardview background just in case*/
@@ -92,13 +104,11 @@ h2 {
     background-color: rgba(255, 255, 255, 0.2);
     background-size: cover;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-bottom: 15%;
     font-size: large;
-    border-radius: 4px;
     max-width: 80%;
 }
 #contentBox1, #contentBox2, #contentBox3, #contentBox4, #contentBox5 {
@@ -109,6 +119,7 @@ h2 {
 .align {
     display: flex;
 }
+
 
 #bottomForm {
   align-self: center;
@@ -128,9 +139,13 @@ h2 {
     position: static;
     bottom: 0;
 }
+#bottomBar img {
+  margin-top: 1em;
+  width: 9em;
+  height: 2em;
+}
 #topBar {
     background-color: black;
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -221,18 +236,20 @@ h2 {
   .right-content button {
     color: black ;
     padding: 0.5em 1em;
-    border: none;
   }
 p:not(.why) {
     padding: 0;
     font-size: 1.2rem;
     text-align: justify;
-    font-family: 'Lexend';
     margin-left: 2em;
     margin-right: 2em; /* add horizontal margin */
 }
+p {
+    font-family: 'lexend';
+}
 button {
   font-family: 'Satoshi Medium';
+  font-size: 16px;
   border-radius: .1em 20px 20px;
 }
 #contact {
@@ -258,8 +275,8 @@ button {
   p { font-size: 16px; }
   /* Center the top logo */
   .topLogo { display: block; margin: 0 auto; }
-  /* Remove the social media icons */
-  #socialMedia { display: none; }
+  /* Remove the social media icons 
+  #socialMedia { display: none; }*/
   /* Adjust the layout of contentBox2, contentBox3, and contentBox4 */
   .animals { display: none; }
   .left-content { width: 100%; }
