--- a/style.css
+++ b/style.css
@@ -1,296 +1,363 @@
 body {
-    background-image: url("assets/BG.png");
-    color: white;
-    margin: 0;
-    max-width: 100%;
-    font-size: 16px;
-    text-align: center;
+  background-image: url("assets/BG.png");
+  color: white;
+  margin: 0;
+  font-size: 16px;
+  text-align: center;
+  overflow-x: hidden;
 }
 .bodyContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 100%;
-  margin: 0 5%;
+display: flex;
+flex-direction: column;
+align-items: center;
+/*margin: 0 5%;*/
 }
 .smallIcon {
-  width: 2em;
-  height: 2em;
+width: 2em;
+height: 2em;
 }
 @font-face {
-    font-family: 'Lexend';
-    src: url('assets/Lexend-VariableFont_wght.ttf');
+  font-family: 'Lexend';
+  src: url('assets/Lexend-VariableFont_wght.ttf');
 }
 @font-face {
-  font-family: 'Inter Extra Bold';
-  src: url('assets/Inter Extra Bold 800.otf');
+font-family: 'Inter Extra Bold';
+src: url('assets/Inter Extra Bold 800.otf');
 }
 @font-face {
-  font-family: 'Satoshi Medium';
-  src: url('assets/Satoshi-Medium.otf');
+font-family: 'Satoshi Medium';
+src: url('assets/Satoshi-Medium.otf');
 }
 #submit {
-  background-color: black;
-  border: black 1px solid;
-  color: white;
-  padding: 0.5em 3em;
-  margin: 6px;
-  text-align: center;
-  font-size: 16px;
+background-color: black;
+border: black 1px solid;
+color: white;
+padding: 0.5em 3em;
+margin-bottom: 1.5em;
+text-align: center;
+font-size: 16px;
+
 }
 
 h2 {
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-    font-family: 'Inter Extra Bold';
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+  font-family: 'Inter Extra Bold';
 }
 h2:not(#contentBox5 #contentBox6) {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 #socialMedia img {
-  margin-right: 1.5em;
-  padding: 0 1.5em;
+margin-right: 1.5em;
+padding: 0em 1.5em;
 }
 #socialMedia {
-  margin-bottom: .5em;
-  margin-top: 2em;
+margin-bottom: .5em;
+/*margin-top: 2em;*/
+display: flex;
 }
 .why {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 4em;
-    padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 4em;
+  padding: 2em;
 }
 
 #contentBox5 .why p {
-  margin: 0;
-  text-align: center;
+margin: 0;
+text-align: left;
 }
 #contentBox5 img {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    max-width: 150px; /* subject to change*/
-    max-height: 100px; /* subject to change*/
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  max-width: 150px; /* subject to change*/
+  max-height: 100px; /* subject to change*/
 }
 #contentBox1 {
-  flex-direction: column;
-  justify-content: center;
-  flex-direction: space-between;
-  align-items: center;
-  text-align: center;
-  padding: 6em 6em 0 6em;
-  width: 67%;
-  padding-bottom: 1em;
+flex-direction: column;
+justify-content: center;
+flex-direction: space-between;
+align-items: center;
+text-align: center;
+padding: 2.5em 6em 2.5em 6em;
+width: 67%;
+margin-top: 3.6em;
 }
 #contentBox1 h1 {
-  color: black;
-  font-family: 'inter Extra Bold';
+color: black;
+font-family: 'inter Extra Bold';
 }
 #subForm {
-  background-color: white;
-  border: solid 1px white;
-  border-radius: 0 0px 0px 20px;
-  opacity: 0.84;
-  margin-right: 1.5em;
-  padding: 1.5em 0 1.5em 8em;
+background-color: white;
+border: solid 1px white;
+border-radius: 0 0px 0px 20px;
+opacity: 0.84;
+margin-right: 1.5em;
+padding: 1.5em 0 1.5em 8em;
 }
 #subscribe {
-  padding: 1em 2em;
-  border-radius: 0 2em 2em 0;
-  border: solid 1px white;
+padding: 1em 2em;
+border-radius: 0 2em 2em 0;
+border: solid 1px white;
 }
 #contentBox1, #contentBox2, #contentBox3, #contentBox4 {
-    /*background-image: url("assets/bgCard.png");*/ /*Keeping cardview background just in case*/
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.2);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-    margin-bottom: 15%;
-    font-size: large;
-    max-width: 80%;
+  /*background-image: url("assets/bgCard.png");*/ /*Keeping cardview background just in case*/
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.2);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 15%;
+  font-size: large;
+  max-width: 80%;
 }
 #contentBox1, #contentBox2, #contentBox3, #contentBox4, #contentBox5 {
-  margin-left: 8%;
-  margin-right: 8%;
-  border-radius: 2em 2em 2em 2em;
+margin-left: 8%;
+margin-right: 8%;
+border-radius: 2em 2em 2em 2em;
 }
 .align {
-    display: flex;
+  display: flex;
 }
 
+.footerPic {
+max-height: 90em;
+max-width: 90em;
+}
 
 #bottomForm {
-  align-self: center;
-  color: white;
-  background-color: transparent;
+align-self: center;
+color: white;
+background-color: transparent;
 }
 
 #bottomBar {
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    height: 4em;
-    padding: 2em;
-    margin-top: 1em;
-    width: 100%;
-    position: static;
-    bottom: 0;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  height: 4em;
+  padding: 2em;
+  margin-top: 1em;
+  width: 100%;
+  position: static;
+  bottom: 0;
 }
 #bottomBar img {
-  margin-top: 1em;
-  width: 9em;
-  height: 2em;
+margin-top: 1em;
+width: 9em;
+height: 2em;
 }
 #topBar {
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 3.0em;
-    padding: 2em;
-    margin-bottom: 1em;
-    width: 100%;
-    position: static;
-    top: 0;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3.0em;
+  padding: 2em;
+  margin-bottom: 1em;
+  width: 100%;
+  position: static;
+  top: 0;
 }
 #contentBox5 {
-   /* background-image: url("assets/cardBG.png");*/
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.2);
-    background-size: 100%;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    position: relative; /*subject to change*/
-    padding: 3em;
-    text-align: center;
-    
+ /* background-image: url("assets/cardBG.png");*/
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.2);
+  background-size: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  position: relative; /*subject to change*/
+  padding: 3em;
+  text-align: center;
+  
 }
 #contentBox5 h2 {
-    position: absolute; /* Set the position of the h2 element to absolute */
-    top: 0; /* Position it at the top of the container */
-    left: 50%; /* Center it horizontally */
-    transform: translateX(-50%);
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: .5em;
-    margin-top: .5em;
-  }
-  #contentBox5 h3 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  #contentBox6 {
-    display: flex;
-    align-items: center;
-    margin-top: 3em;
-    color: black;
-  }
-  .left-content {
-    flex: 1;
-    padding: 50px 20px 0 0px;  /*add horizontal padding */
-  }
-  h3 {
-    font-family: 'Satoshi Medium';
-  }
-  .right-content {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .right-content h2 {
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  
-  .right-content p {
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  
-  .right-content form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .right-content input[type="email"] {
-    padding: 0.5em;
-    border: none;
-    border-radius: 0.25em;
-    
-    width: 100%;
-    max-width: 20em;
-  }
-  
-  .right-content button {
-    color: black ;
-    padding: 0.5em 1em;
-  }
-p:not(.why) {
-    padding: 0;
-    font-size: 1.2rem;
-    text-align: justify;
-    margin-left: 2em;
-    margin-right: 2em; /* add horizontal margin */
-}
-p {
-    font-family: 'lexend';
-}
-button {
-  font-family: 'Satoshi Medium';
-  font-size: 16px;
-  border-radius: .1em 20px 20px;
-}
-#contact {
-  background-color: white;
-}
-#bottomBar button {
-  border-radius: .1em 20px 20px;
-  padding: 3px;
-  height: 4em;
-  width: 10em;
+  position: absolute; /* Set the position of the h2 element to absolute */
+  top: 0; /* Position it at the top of the container */
+  left: 50%; /* Center it horizontally */
+  transform: translateX(-50%);
+  font-size: 2em;
   font-weight: bold;
+  text-align: center;
+  margin-bottom: .5em;
+  margin-top: .5em;
 }
-.animals {
-  object-fit: contain;
+#contentBox5 h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#contentBox6 {
+  display: flex;
+  align-items: center;
+  margin-top: 3em;
+  color: black;
+  padding-bottom: 3.5em;
+}
+.left-content {
+  flex: 1;
+  padding: 50px 0px 0 0px;  /*add horizontal padding */
+}
+h3 {
+  font-family: 'Satoshi Medium';
+}
+.right-content {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.right-content h2 {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.right-content p {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.right-content form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.right-content input[type="email"] {
+  padding: 0.5em;
+  border: none;
+  border-radius: 0.25em;
+  
+  width: 100%;
+  max-width: 20em;
+}
+
+.right-content button {
+  color: black ;
+  padding: 0.5em 1em;
+}
+p:not(.why) {
+  padding: 0;
+  font-size: 1.2rem;
+  text-align: justify;
+  margin-left: 2em;
+  margin-right: 2em; /* add horizontal margin */
+}
+p {
+  font-family: 'lexend';
+}
+button {
+font-family: 'Satoshi Medium';
+font-size: 16px;
+border-radius: .1em 20px 20px;
+}
+#contact {
+background-color: white;
+}
+#bottomBar button {
+border-radius: .1em 20px 20px;
+padding: 3px;
+height: 4em;
+width: 10em;
+font-weight: bold;
+border: 1px solid black;
+}
+.animals {
+object-fit: contain;
+}
 /* CSS for smaller screens */
 @media screen and (max-width: 1200px) {
   /* Adjust the font sizes */
   h1 { font-size: 24px; }
   h2 { font-size: 20px; }
   h3 { font-size: 18px; }
-  p { font-size: 16px; }
+  p:not(#contentBox1) { font-size: 16px; text-align: left;}
   /* Center the top logo */
   .topLogo { display: block; margin: 0 auto; }
   /* Remove the social media icons 
   #socialMedia { display: none; }*/
-  /* Adjust the layout of contentBox2, contentBox3, and contentBox4 */
+  #socialMedia {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  #socialMedia img {
+    width: 55%; /* adjust this value as needed */
+    max-width: 100%; 
+  }
+  /* Adjust the layout of contentBox2, contentBox3, and contentBox4 and take out the animal pics */
   .animals { display: none; }
   .left-content { width: 100%; }
   /* Adjust the layout of contentBox5 */
   .why { width: 100%; text-align: center; }
   /* Adjust the layout of contentBox6 */
   .footerPic { width: 100%; }
-  .right-content { text-align: center; }
+  #contentBox1 p { text-align: center; }
+  .left-content { text-align: left; }
+  #contentBox1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 2em 2em 2em 2em;
+  }
+  #contentBox2 #contentBox3 #contentBox4  {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 2em;
+  }
+  #contentBox5  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 2em 2em;
+  }
+  #contentBox6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 2em 2em;
+  }
+  #subForm {
+    width: 15em;
+    max-width: fit-content;
+  }
+  #bottomBar {
+    display: flex;
+    justify-content: space-between;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  .bodyContainer {
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 0 16px;
+  }
+  #topBar, #bottomBar, #contentBox1, #contentBox2, #contentBox3, #contentBox4, #contentBox5, #contentBox6 {
+    max-width: 100%;
+    padding: 2em;
+  }
 }
 
 
