--- a/style.css
+++ b/style.css
@@ -335,8 +335,13 @@ object-fit: contain;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: fit-content;
     text-align: center;
     padding: 2em 2em;
+  }
+  #contentBox6 h2 {
+    max-width: fit-content;
+
   }
   #subForm {
     width: 15em;
