--- a/style.css
+++ b/style.css
@@ -333,11 +333,16 @@ object-fit: contain;
   #contentBox6 {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    max-width: fit-content;
-    text-align: center;
-    padding: 2em 2em;
+    align-items: center;
+  }
+
+  .left-content {
+    margin-bottom: 20px;
+  }
+
+  .footerPic {
+    max-width: 100%;
   }
   #contentBox6 h2 {
     max-width: fit-content;
