--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 display: flex;
 flex-direction: column;
 align-items: center;
-margin: 0 5%;
+/*margin: 0 5%;*/
 }
 .smallIcon {
 width: 2em;
