--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 display: flex;
 flex-direction: column;
 align-items: center;
-/*margin: 0 5%;*/
+margin: 0 5%;
 }
 .smallIcon {
 width: 2em;
@@ -280,7 +280,7 @@ border: 1px solid black;
 object-fit: contain;
 }
 /* CSS for smaller screens */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 780px) {
   /* Adjust the font sizes */
   h1 { font-size: 24px; }
   h2 { font-size: 20px; }
