--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ display: flex;
 flex-direction: column;
 align-items: center;
 margin: 0 5%;
+height: 100%;
 }
+
 .smallIcon {
 width: 2em;
 height: 2em;
@@ -390,6 +392,37 @@ object-fit: contain;
   }
   #subscribe {
     width: 50%;
+  }
+  form {
+    width: 100%;
+  }
+  
+  form input[type="text"],
+  form input[type="email"],
+  form input[type="tel"] {
+    width: 100%;
+    padding: 10px;
+    
+  }
+  
+  form textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+  
+  form button {
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: white;
+    border: none;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
   }
 }
 
